# triton-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  AUTOMATION.md  CLAUDE.md  Dockerfile  Dockerfile.triton  Makefile  README.md  docker-compose.yml  export.py  inference-api.py  inference-batch.py  inference-mp.py  inference.py  processor.py  pyproject.toml  readme.md  readme.txt  requirements-dev.txt  requirements.txt  unload_all.sh
benchmarks/: .golangci.yml  BENCHMARK_RESULTS.md  GO_SETUP.md  README.md  TESTING_GUIDE.md  aggregate_results.py  build.sh  create_benchmark_configs.py  go.mod  isolated_benchmark.sh  triton_bench.go
dali/: README.md  __init__.py  config.py  create_dali_letterbox_pipeline.py  create_dual_dali_pipeline.py  create_ensembles.py  create_penta_dali_pipeline.py  create_quad_dali_pipeline.py  create_yolo_clip_dali_pipeline.py  utils.py  validate_dali_letterbox.py  validate_dual_dali_preprocessing.py
docs/: DEPLOYMENT_GUIDE.md  FACE_RECOGNITION_IMPLEMENTATION.md  FEATURE_ROADMAP.md  GRPC_CONNECTION_SCALING.md  IMPLEMENTATION_NOTES.md  MODEL_EXPORT_GUIDE.md  OCR_DEPLOYMENT_CHECKLIST.md  OCR_IMPLEMENTATION_PLAN.md  OCR_SETUP_GUIDE.md  OPTIMIZATION_SUMMARY.md  PADDING_COMPARISON_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_ARCHITECTURE.md  README.md  TESTING.md  THREAD_SAFETY_FIX.md  TRACK_E_DEPLOYMENT_CHECKLIST.md  TRACK_E_GUIDE.md  TRACK_E_IMPLEMENTATION_STATUS.md  TRACK_E_SUMMARY.md  opensearch_schema_design.md
docs/Attribution/: END2END_ANALYSIS.md  FORK_COMPARISON.md
docs/Technical/: DALI_LETTERBOX_IMPLEMENTATION.md  MODEL_FOLDER_STRUCTURE.md  STREAMING_OPTIMIZATION.md  TRITON_BEST_PRACTICES.md
docs/Tracks/: BENCHMARKING_GUIDE.md  TRACK_D_COMPLETE.md
docs/future_work/: TRACK_E_FINAL_PHASES.md  TRACK_E_IMPLEMENTATION_PHASES.md  TRACK_E_PROJECT_PLAN.md
export/: README.md  cleanup_for_reexport.sh  download_face_models.py  download_paddleocr.py  download_pytorch_models.py  download_pytorch_models.sh  export_face_detection.py  export_face_recognition.py  export_mobileclip_image_encoder.py  export_mobileclip_text_encoder.py  export_models.py  export_paddleocr_det.py  export_paddleocr_rec.py  export_scrfd_end2end.py  export_small_only.sh  export_yolo11_face.py  models_config.example.yaml
models/arcface_w600k_r50/: config.pbtxt
models/box_embedding_extractor/: config.pbtxt
models/dual_preprocess_dali/: config.pbtxt
models/face_embedding_extractor/: config.pbtxt
models/face_pipeline/: config.pbtxt
models/mobileclip2_s2_image_encoder/: config.pbtxt
models/mobileclip2_s2_text_encoder/: config.pbtxt
models/ocr_pipeline/: config.pbtxt
models/paddleocr_det_trt/: config.pbtxt
models/paddleocr_rec_trt/: config.pbtxt
models/quad_preprocess_dali/: config.pbtxt
models/scrfd_10g_face_detect/: config.pbtxt
models/scrfd_postprocess/: config.pbtxt
models/unified_complete_pipeline/: config.pbtxt
models/unified_embedding_extractor/: config.pbtxt
models/yolo11_face_pipeline/: config.pbtxt
models/yolo11_face_small_trt/: config.pbtxt
models/yolo11_face_small_trt_end2end/: config.pbtxt
models/yolo_clip_ensemble/: config.pbtxt
models/yolo_clip_preprocess_dali/: config.pbtxt
models/yolo_face_clip_ensemble/: config.pbtxt
models/yolo_mobileclip_ensemble/: config.pbtxt
models/yolo_preprocess_dali/: config.pbtxt
models/yolo_preprocess_dali_batch/: config.pbtxt
models/yolo_preprocess_dali_streaming/: config.pbtxt
models/yolo_unified_ensemble/: config.pbtxt
models/yolov11_medium/: config.pbtxt
models/yolov11_nano/: config.pbtxt
models/yolov11_small/: config.pbtxt
models/yolov11_small_gpu_e2e/: config.pbtxt
models/yolov11_small_gpu_e2e_batch/: config.pbtxt
models/yolov11_small_gpu_e2e_streaming/: config.pbtxt
models/yolov11_small_trt/: config.pbtxt
models/yolov11_small_trt_end2end/: config.pbtxt
models/yolov11_small_trt_end2end_batch/: config.pbtxt
models/yolov11_small_trt_end2end_streaming/: config.pbtxt
monitoring/: README.md  grafana-dashboards.yml  loki-config.yml  prometheus.yml  promtail-config.yml
monitoring/alerts/: triton-alerts.yml
monitoring/dashboards/: triton-unified-dashboard.json
scripts/: README.md  benchmark_batch.py  check_services.sh  client_ingest.py  clone_reference_repos.sh  create_mosaics.py  create_ocr_test_images.py  download_ocr_test_images.py  download_yolo11_face.py  export_paddleocr.sh  export_results.json  ingest_all_indexes.py  ingest_and_cluster_faces.py  profile_api.sh  resize_images.py  setup_face_test_data.sh  setup_padding_comparison.sh  test_clustering.py  test_face_pipeline.py  test_face_pipeline_gpu.py  test_ocr_pipeline.py  test_shared_client.sh  visualize_unified_results.py
scripts/track_e/: README.md  create_triton_configs.py  install_mobileclip_deps.sh  setup_mobileclip_env.sh
src/: README.md  main.py
src/clients/: __init__.py  opensearch.py  triton_client.py  triton_pool.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  dependencies.py  exceptions.py
src/routers/: __init__.py  health.py  models.py  track_a.py  track_e.py  track_f.py  triton.py
src/schemas/: __init__.py  common.py  detection.py  models.py  track_e.py
src/services/: __init__.py  cluster_maintenance.py  clustering.py  duplicate_detection.py  embedding.py  face_identity.py  image.py  inference.py  model_export.py  ocr_service.py  triton_control.py  visual_search.py
src/ultralytics_patches/: README.md  __init__.py  end2end_export.py
src/utils/: README.md  __init__.py  affine.py  cache.py  face_alignment.py  image_processing.py  models.py  pytorch_utils.py  retry.py  triton_end2end_client.py  triton_shared_client.py
tests/: README.md  compare_padding_methods.py  compare_tracks.py  create_test_images.py  debug_track_e_dali_comparison.py  detection_comparison_utils.py  test_end2end_patch.py  test_inference.sh  test_onnx_end2end.py  test_shared_vs_per_request.sh  test_track_e_ensemble.py  test_track_e_images.py  test_track_e_integration.py  test_track_e_phase1_pipeline.py  validate_mobileclip_triton.py  validate_models.sh
(+21 files in other folders)
